--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Change this to match your branch
+      - main # Change this to match your branch
 
 jobs:
   deploy:
@@ -13,20 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Use Node.js 18
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18 # Update to the desired LTS version
+
       - name: Install dependencies
         run: npm install
 
       - name: Build React app
-        run: npm run build
+        run: npm run build # Assuming you have a build script in package.json
 
       - name: Transfer files to EC2 instance
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.EC2_HOST }}  # Your EC2 instance IP or hostname
-          username: ${{ secrets.EC2_USERNAME }}  # Username to SSH into EC2 instance
-          key: ${{ secrets.SSH_PRIVATE_KEY }}  # Your SSH private key (the contents of the .pem file)
-          source: "dist/*"  # Path to your built React app
-          target: "/var/www/html/change-times/dist"  # Path on the EC2 instance to transfer files
+          host: ${{ secrets.EC2_HOST }} # Your EC2 instance IP or hostname
+          username: ${{ secrets.EC2_USERNAME }} # Username to SSH into EC2 instance
+          key: ${{ secrets.SSH_PRIVATE_KEY }} # Your SSH private key (the contents of the .pem file)
+          source: "dist/*" # Path to your built React app
+          target: "/var/www/html/change-times/dist" # Path on the EC2 instance to transfer files
 
       - name: SSH into EC2 instance and restart server
         uses: appleboy/ssh-action@master
@@ -36,5 +41,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /path/to/your/destination
+            cd /var/www/html/change-times/dist
             # Restart your server here (e.g., using pm2 or systemctl)
+            # Consider providing more specific restart instructions based on your setup
