--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,23 +16,22 @@ jobs:
       - name: Use Node.js 18
         uses: actions/setup-node@v2
         with:
-          node-version: 18 # Update to the desired LTS version
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
 
       - name: Build React app
-        run: npm run build # Assuming you have a build script in package.json
+        run: npm run build
 
       - name: Transfer files to EC2 instance
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.EC2_HOST }} # Your EC2 instance IP or hostname
-          username: ${{ secrets.EC2_USERNAME }} # Username to SSH into EC2 instance
-          key: ${{ secrets.SSH_PRIVATE_KEY }} # Your SSH private key (the contents of the .pem file)
-          source: "dist/*" # Path to your built React app
-          target: "/var/www/html/change-times" # Path on the EC2 instance to transfer files
-
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "dist/*"
+          target: "/var/www/html/timezones"
 
       # - name: SSH into EC2 instance and restart server
       #   uses: appleboy/ssh-action@master
@@ -44,4 +43,3 @@ jobs:
       #     script: |
       # cd /var/www/html/change-times/dist
       # Restart your server here (e.g., using pm2 or systemctl)
-      # Consider providing more specific restart instructions based on your setup
