--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,30 +24,12 @@ jobs:
       - name: Build React app
         run: npm run build
 
-      - name: Transfer files to EC2 instance
-        uses: nLoizar/rsync-action@v2 # Replace with the desired rsync action
+      - name: Rsync to EC2
+        uses: burnett01/rsync-deployments@7.0.0
         with:
-          source: "dist/" # Path to your build directory
-          destination: "ubuntu@${{ secrets.EC2_HOST }}:/var/www/html/timezones" # Username, host, and target path
-          rsync_options: "-avz"
-          ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # - name: Transfer files to EC2 instance
-      #   uses: appleboy/scp-action@master
-      #   with:
-      #     host: ${{ secrets.EC2_HOST }}
-      #     username: ${{ secrets.EC2_USERNAME }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     source: "dist/*"
-      #     target: "/var/www/html/timezones"
-
-      # - name: SSH into EC2 instance and restart server
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.EC2_HOST }}
-      #     username: ${{ secrets.EC2_USERNAME }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     port: 22
-      #     script: |
-      # cd /var/www/html/change-times/dist
-      # Restart your server here (e.g., using pm2 or systemctl)
+          switches: -avzr --delete
+          path: dist/
+          remote_path: /var/www/html/timezones
+          remote_host: ${{ secrets.EC2_HOST }}
+          remote_user: ${{ secrets.EC2_USERNAME }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
